--- a/index.html
+++ b/index.html
@@ -4,91 +4,118 @@
 <head>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&family=Raleway&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&family=Raleway:wght@300;400;500&display=swap" rel="stylesheet">
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>GridFC</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 	<script defer src="script.js"></script>
+	<!-- <script defer src="renderer.js"></script> -->
 </head>
 
 <body>
 	<div class="wrapper">
 		<nav class="navigation">
-			<div class="title">Grid<span>FC</span></div>
-			<div class="navigation__item dropdown">
-				<div class="dropdown__toggle">Файл</div>
-				<div class="dropdown__menu">
-					<button id="" class="navigation__btn dropdown__item">Новий проєкт</button>
-					<button id="" class="navigation__btn dropdown__item">Зберегти</button>
-					<div class="dropdown__divider"></div>
-					<button id="" class="navigation__btn dropdown__item">Видалити</button>
-					<button id="" class="navigation__btn dropdown__item">Закрити</button>
-					<button id="removeAllTabs" class="navigation__btn dropdown__item">Закрити всі вкладки</button>
-					<div class="dropdown__divider"></div>
-					<button id="" class="navigation__btn dropdown__item">Експорт у PDF</button>
+			<div class="navigation__menu">
+				<!-- <div class="logo"><img src="logo.png" alt=""></div> -->
+				<div class="title">Grid<span>FC</span></div>
+				<div class="navigation__item dropdown">
+					<div class="dropdown__toggle">Файл</div>
+					<div class="dropdown__menu">
+						<button id="newFile" class="navigation__btn dropdown__item">Новий проєкт</button>
+						<button id="saveFile" data-disabled="file" class="navigation__btn dropdown__item">Зберегти</button>
+						<div class="dropdown__divider"></div>
+						<button id="deleteFile" data-disabled="file" class="navigation__btn dropdown__item">Видалити</button>
+						<button id="" data-disabled="file" class="navigation__btn dropdown__item">Закрити</button>
+						<button id="removeAllTabs" data-disabled="file" class="navigation__btn dropdown__item">Закрити все</button>
+						<div class="dropdown__divider"></div>
+						<button id="export" data-disabled="pdf" class="navigation__btn dropdown__item">Експорт у PDF</button>
+					</div>
+				</div>
+				<div class="navigation__item dropdown">
+					<div class="dropdown__toggle">Площина</div>
+					<div class="dropdown__menu">
+						<button id="removeAllExcisions" data-disabled="excisions" class="navigation__btn dropdown__item">Видалити всі вирізи</button>
+						<div class="dropdown__divider"></div>
+						<button id="clonePlane" data-disabled="plane" class="navigation__btn dropdown__item">Скопіювати площину</button>
+						<button id="removePlane" data-disabled="plane" class="navigation__btn dropdown__item">Видалити площину</button>
+						<div class="dropdown__divider"></div>
+						<button id="addStandartTiles" data-disabled="plane" class="navigation__btn dropdown__item">Стандартна розкладка</button>
+						<button id="removeTiles" data-disabled="tiles" class="navigation__btn dropdown__item">Очистити розкладку</button>
+					</div>
+				</div>
+				<!-- <div class="navigation__item dropdown">
+					<div class="dropdown__toggle">Розкладка</div>
+					<div class="dropdown__menu">
+						<button id="addStandartTiles" data-disabled="plane" class="navigation__btn dropdown__item">Стандартні</button>
+						<button id="removeTiles" data-disabled="tiles" class="navigation__btn dropdown__item">Очистити</button>
+					</div>
+				</div> -->
+				<div class="navigation__item dropdown">
+					<div class="dropdown__toggle">Редагування</div>
+					<div class="dropdown__menu">
+						<button id="unDo" data-disabled="unDo" class="navigation__btn dropdown__item">Скасувати</button>
+						<button id="reDo" data-disabled="reDo" class="navigation__btn dropdown__item">Повторити</button>
+						<div class="dropdown__divider"></div>
+						<button id="centerX" data-disabled="tiles" class="navigation__btn dropdown__item">Центрувати по осі X</button>
+						<button id="centerY" data-disabled="tiles" class="navigation__btn dropdown__item">Центрувати по осі Y</button>
+						<div class="dropdown__divider"></div>
+						<button id="trim" data-disabled="tiles" class="navigation__btn dropdown__item">Трімінг по контуру</button>
+						<button id="trimUp" data-disabled="tiles" class="navigation__btn dropdown__item">Трімінг зверху</button>
+						<button id="trimDown" data-disabled="tiles" class="navigation__btn dropdown__item">Трімінг знизуу</button>
+						<button id="trimLeft" data-disabled="tiles" class="navigation__btn dropdown__item">Трімінг зліва</button>
+						<button id="trimRight" data-disabled="tiles" class="navigation__btn dropdown__item">Трімінг зправа</button>
+					</div>
+				</div>
+				<div class="navigation__item dropdown">
+					<div class="dropdown__toggle">Довідка</div>
+					<div class="dropdown__menu">
+						<button id="" class="navigation__btn dropdown__item">Вихідний код</button>
+						<button id="" class="navigation__btn dropdown__item">Про програму</button>
+					</div>
 				</div>
 			</div>
-			<div class="navigation__item dropdown">
-				<div class="dropdown__toggle">Площина</div>
-				<div class="dropdown__menu">
-					<button id="removeAllExcisions" class="navigation__btn dropdown__item disabled disabled-type disabled-excisions">Видалити всі вирізи</button>
-					<div class="dropdown__divider"></div>
-					<button id="clonePlane" class="navigation__btn dropdown__item disabled disabled-type disabled-plane">Скопіювати площину</button>
-					<button id="removePlane" class="navigation__btn dropdown__item disabled disabled-type disabled-plane">Видалити площину</button>
-					<!-- <div class="dropdown__divider"></div>
-					<button id="" class="navigation__btn dropdown__item" disabled>Друкувати площину</button> -->
-				</div>
+			<div class="navigation__file">GridFC</div>
+			<div class="navigation__buttons">
+				<!-- <div class="bi bi-dash-lg"></div>
+				<div class="bi bi-fullscreen"></div>
+				<div class="bi bi-x-lg"></div> -->
 			</div>
-			<div class="navigation__item dropdown">
-				<div class="dropdown__toggle">Розкладка</div>
-				<div class="dropdown__menu">
-					<button id="addStandartTiles" class="navigation__btn dropdown__item disabled disabled-type disabled-plane">Стандартні</button>
-					<button id="removeTiles" class="navigation__btn dropdown__item disabled disabled-type disabled-tiles">Очистити</button>
-					<div class="dropdown__divider"></div>
-					<button id="fullReport" class="navigation__btn dropdown__item disabled disabled-type disabled-tiles">Специфікація</button>
-				</div>
-			</div>
-			<div class="navigation__item dropdown">
-				<div class="dropdown__toggle">Редагування</div>
-				<div class="dropdown__menu">
-					<button id="centerX" class="navigation__btn dropdown__item disabled disabled-type disabled-tiles">Центрувати по осі X</button>
-					<button id="centerY" class="navigation__btn dropdown__item disabled disabled-tiles">Центрувати по осі Y</button>
-					<div class="dropdown__divider"></div>
-					<button id="trim" class="navigation__btn dropdown__item disabled disabled-type disabled-tiles">Трімінг по контуру</button>
-					<button id="trimUp" class="navigation__btn dropdown__item disabled disabled-type disabled-tiles">Трімінг зверху</button>
-					<button id="trimDown" class="navigation__btn dropdown__item disabled disabled-type disabled-tiles">Трімінг знизуу</button>
-					<button id="trimLeft" class="navigation__btn dropdown__item disabled disabled-type disabled-tiles">Трімінг зліва</button>
-					<button id="trimRight" class="navigation__btn dropdown__item disabled disabled-type disabled-tiles">Трімінг зправа</button>
-				</div>
-			</div>
-			<div class="navigation__item dropdown">
-				<div class="dropdown__toggle">Довідка</div>
-				<div class="dropdown__menu">
-					<button id="" class="navigation__btn dropdown__item">Вихідний код</button>
-					<button id="" class="navigation__btn dropdown__item">Про програму</button>
-				</div>
-			</div>
-			<div class="tabs"></div>
 		</nav>
 		<main class="workspace">
 			<aside class="sidebar">
 				<div class="sidebar__group sidebar__group_panels">
-					<i data-id="files" class="bi bi-files sidebar__btn"></i>
-					<i data-id="plane" class="bi bi-bounding-box-circles sidebar__btn"></i>
-					<i data-id="excision" class="bi bi-scissors sidebar__btn"></i>
-					<i data-id="tiles" class="bi bi-grid-3x3 sidebar__btn"></i>
-					<i data-id="edit" class="bi bi-pencil sidebar__btn"></i>
-					<i data-id="paint" class="bi bi-brush sidebar__btn"></i>
-					<i data-id="report" class="bi bi-calculator sidebar__btn"></i>
+					<button data-id="files" data-tooltip="Проєкти" class="bi bi-files sidebar__btn"></button>
+					<button data-id="plane" data-tooltip="Площина" class="bi bi-bounding-box-circles sidebar__btn"></button>
+					<button data-id="excision" data-tooltip="Вирізи" class="bi bi-scissors sidebar__btn"></button>
+					<button data-id="tiles" data-tooltip="Розкладка" class="bi bi-grid-3x3 sidebar__btn"></button>
+					<button data-id="edit" data-tooltip="Редагування" class="bi bi-pencil sidebar__btn"></button>
+					<button data-id="paint" data-tooltip="Фарбування" class="bi bi-brush sidebar__btn"></button>
+					<button data-id="report" data-tooltip="Дані площини" class="bi bi-calculator sidebar__btn"></button>
+					<button data-id="fullReport" data-tooltip="Специфікація" class="bi bi-file-text sidebar__btn"></button>
 				</div>
 				<div class="sidebar__group">
-					<i id="settings" class="bi bi-gear sidebar__btn"></i>
+					<button id="settings" data-tooltip="Налаштування" class="bi bi-gear sidebar__btn"></button>
 				</div>
 			</aside>
 			<div class="control">
+				<div id="files" class="plane control__item">
+					<div class="control__caption">Проєкти</div>
+					<div class="control__group">
+						<div class="files">
+							<div class="files__buttons">
+								<button id="explorerNewFile" data-tooltip="Новий проєкт" class="files__button bi bi-file-earmark-plus"></button>
+								<button id="explorerRefresh" data-tooltip="Оновити список файлів" class="files__button bi bi-arrow-clockwise"></button>
+								<button id="explorerRename" data-tooltip="Переіменувати" class="files__button bi bi-pencil-square"></button>
+								<button id="explorerDelete" data-tooltip="Видалити" class="files__button bi bi-trash3"></button>
+							</div>
+							<div class="files__folder bi bi-folder"></div>
+							<div class="files__items"></div>
+						</div>
+					</div>
+				</div>
 				<div id="plane" class="plane control__item">
 					<div class="control__caption">Нова площина</div>
 					<div class="control__group">
@@ -98,7 +125,10 @@
 							<input id="planeHeight" class="" type="number" value="2500">
 							<label for="planeHeight" class="">Висота, мм</label>
 						</div>
-						<button id="addPlane">Додати площину</button>
+						<button id="addPlane" data-disabled="file">Додати площину</button>
+						<div class="control__group">
+							<div class="planes__tabs"></div>
+						</div>
 					</div>
 				</div>
 				<div id="excision" class="excisions control__item">
@@ -114,10 +144,10 @@
 							<input id="excisionDY" class="" type="number" value="1000">
 							<label for="excisionDY" class="">dY</label>
 						</div>
-						<button id="addExcision">Додати виріз</button>
+						<button id="addExcision" data-disabled="plane">Додати виріз</button>
 					</div>
 					<div class="control__group">
-						<div id="excisions" class="excisions__tabs"></div>
+						<div class="excisions__tabs"></div>
 					</div>
 				</div>
 				<div id="tiles" class="tiles control__item">
@@ -132,15 +162,17 @@
 							<input id="tileJoint" class="" type="number" value="50">
 							<label for="tileJoint" class="">Стик, мм</label>
 						</div>
-						<button id="addTiles">Розкласти</button>
+						<button id="addTiles" data-disabled="plane">Розкласти</button>
 					</div>
 					<div class="control__group">
 						<div class="control__label control__label_center">Задана кількість</div>
 						<div class="control__inputs">
-							<input id="columns" class="" type="number" value="5">
+							<input id="columns" class="" type="number" value="5" data-disabled="plane">
 							<label for="columns" class="">Кількість по X</label>
-							<input id="rows" class="" type="number" value="5">
+							<input id="rows" class="" type="number" value="5" data-disabled="plane">
 							<label for="rows" class="">Кількість по Y</label>
+							<input id="tileGridJoint" class="" type="number" value="15">
+							<label for="tileGridJoint" class="">Стик, мм</label>
 						</div>
 					</div>
 				</div>
@@ -156,13 +188,13 @@
 					<div class="control__group">
 						<div class="move">
 							<div></div>
-							<button id="moveUp" class="bi bi-caret-up-fill"></button>
+							<button id="moveUp" data-disabled="tiles" class="bi bi-caret-up-fill"></button>
 							<div></div>
-							<button id="moveLeft" class="bi bi-caret-left-fill"></button>
+							<button id="moveLeft" data-disabled="tiles" class="bi bi-caret-left-fill"></button>
 							<div></div>
-							<button id="moveRight" class="bi bi-caret-right-fill"></button>
+							<button id="moveRight" data-disabled="tiles" class="bi bi-caret-right-fill"></button>
 							<div></div>
-							<button id="moveDown" class="bi bi-caret-down-fill"></button>
+							<button id="moveDown" data-disabled="tiles" class="bi bi-caret-down-fill"></button>
 							<div></div>
 						</div>
 					</div>
@@ -173,6 +205,8 @@
 							<label for="type1"><i class="bi bi-layout-three-columns"></i></label>
 							<input type="radio" id="type2" name="selection-type" value="column">
 							<label for="type2"><i class="bi bi-layout-three-columns"></i></label>
+							<input type="radio" id="type3" name="selection-type" value="single">
+							<label for="type3"><i class="bi bi-square"></i></label>
 						</div>
 					</div>
 				</div>
@@ -185,66 +219,21 @@
 							<input id="jointColor" type="color" value="#bebebe">
 							<label for="jointColor">Колір стиків</label>
 						</div>
-						<button id="defaultColors">Скинути</button>
+						<button id="defaultColors" data-disabled="tiles">Скинути</button>
 					</div>
 				</div>
 				<div id="report" class="control__item">
-					<div class="control__caption">Специфікація площини</div>
-					<div class="control__label control__label_center">Площина не задана</div>
+					<div class="control__caption">Дані площини</div>
+					<div class="control__report"></div>
+				</div>
+				<div id="fullReport" class="control__item">
+					<div class="control__caption">Специфікація</div>
+					<div class="control__report"></div>
 				</div>
 			</div>
-			<div class="workarea">
-				<!-- <div class="settings">
-					<div class="settings__item">
-						<div class="settings__title">Розміри стандартної касети</div>
-						<div class="settings__details">Визначає розмір касети, по якій буде формуватись розкладка через меню Розкладка->Стандартні</div>
-						<div class="settings__block">
-							<input id="" type="text" value="585">
-							<label for="">Ширина, мм</label>
-							<input id="" type="text" value="585">
-							<label for="">Висота, мм</label>
-							<input id="" type="text" value="15">
-							<label for="">Стик, мм</label>
-						</div>
-					</div>
-					<div class="settings__item">
-						<div class="settings__title">Мінімальний розмір касети</div>
-						<div class="settings__details">Визначає розмір в мм, менше якого касети в розкладці не будуть формуватись</div>
-						<input id="" type="text" value="120">
-					</div>
-					<div class="settings__item">
-						<div class="settings__title">Розмір шрифту касети</div>
-						<div class="settings__details">Визначає розмір шрифту дял написів розмірів на касеті</div>
-						<input id="" type="number" value="14">
-					</div>
-					<div class="settings__item">
-						<div class="settings__title">Колір лінії площини</div>
-						<input id="" type="color" value="#f5f5f5">
-					</div>
-					<div class="settings__item">
-						<div class="settings__title">Колір лінії вирізу</div>
-						<input id="" type="color" value="#f5f5f5">
-					</div>
-					<div class="settings__item">
-						<div class="settings__title">Колір стиків касет</div>
-						<input id="" type="color" value="#f5f5f5">
-					</div>
-					<div class="settings__item">
-						<div class="settings__title">Колір дзеркала касет</div>
-						<input id="" type="color" value="#f5f5f5">
-					</div>
-					<div class="settings__item">
-						<div class="settings__title">Колір активних касет</div>
-						<input id="" type="color" value="#f5f5f5">
-					</div>
-				</div> -->
-			</div>
-			<div class="alert">
-				<div class="alert__body">
-					<div class="alert__title"></div>
-					<div class="alert__message"></div>
-					<button class="alert__close">Закрити</button>
-				</div>
+			<div class="workpanel">
+				<div class="tabs"></div>
+				<div class="workarea"></div>
 			</div>
 		</main>
 	</div>
