--- a/index.html
+++ b/index.html
@@ -2,25 +2,21 @@
 <html lang="en">
 
 <head>
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&family=Raleway:wght@300;400;500&display=swap" rel="stylesheet">
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="Content-Security-Policy" content="script-src 'self'">
 	<title>GridFC</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-	<script defer src="script.js"></script>
-	<!-- <script defer src="renderer.js"></script> -->
+	<link rel="stylesheet" type="text/css" href="css/icons.css">
+	<script defer src="app.js"></script>
 </head>
 
 <body>
 	<div class="wrapper">
 		<nav class="navigation">
 			<div class="navigation__menu">
-				<!-- <div class="logo"><img src="logo.png" alt=""></div> -->
-				<div class="title">Grid<span>FC</span></div>
+				<div class="navigation__icon"><img src="img/logo.png" alt=""></div>
 				<div class="navigation__item dropdown">
 					<div class="dropdown__toggle">Файл</div>
 					<div class="dropdown__menu">
@@ -28,7 +24,7 @@
 						<button id="saveFile" data-disabled="file" class="navigation__btn dropdown__item">Зберегти</button>
 						<div class="dropdown__divider"></div>
 						<button id="deleteFile" data-disabled="file" class="navigation__btn dropdown__item">Видалити</button>
-						<button id="" data-disabled="file" class="navigation__btn dropdown__item">Закрити</button>
+						<button id="removeTab" data-disabled="file" class="navigation__btn dropdown__item">Закрити</button>
 						<button id="removeAllTabs" data-disabled="file" class="navigation__btn dropdown__item">Закрити все</button>
 						<div class="dropdown__divider"></div>
 						<button id="export" data-disabled="pdf" class="navigation__btn dropdown__item">Експорт у PDF</button>
@@ -46,13 +42,6 @@
 						<button id="removeTiles" data-disabled="tiles" class="navigation__btn dropdown__item">Очистити розкладку</button>
 					</div>
 				</div>
-				<!-- <div class="navigation__item dropdown">
-					<div class="dropdown__toggle">Розкладка</div>
-					<div class="dropdown__menu">
-						<button id="addStandartTiles" data-disabled="plane" class="navigation__btn dropdown__item">Стандартні</button>
-						<button id="removeTiles" data-disabled="tiles" class="navigation__btn dropdown__item">Очистити</button>
-					</div>
-				</div> -->
 				<div class="navigation__item dropdown">
 					<div class="dropdown__toggle">Редагування</div>
 					<div class="dropdown__menu">
@@ -72,17 +61,12 @@
 				<div class="navigation__item dropdown">
 					<div class="dropdown__toggle">Довідка</div>
 					<div class="dropdown__menu">
-						<button id="" class="navigation__btn dropdown__item">Вихідний код</button>
-						<button id="" class="navigation__btn dropdown__item">Про програму</button>
+						<button class="navigation__btn dropdown__item"><a href="https://github.com/bubabum/GridFC" target="_blank">Вихідний код</a></button>
+						<button id="showAppVersion" class="navigation__btn dropdown__item">Про програму</button>
 					</div>
 				</div>
 			</div>
 			<div class="navigation__file">GridFC</div>
-			<div class="navigation__buttons">
-				<!-- <div class="bi bi-dash-lg"></div>
-				<div class="bi bi-fullscreen"></div>
-				<div class="bi bi-x-lg"></div> -->
-			</div>
 		</nav>
 		<main class="workspace">
 			<aside class="sidebar">
