html cleared from values, pdf font size smaller

--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
 					<div class="control__caption">Нова площина</div>
 					<div class="control__group">
 						<div class="control__inputs">
-							<input id="planeWidth" class="" type="number" value="6000">
+							<input id="planeWidth" class="" type="number">
 							<label for="planeWidth" class="">Ширина, мм</label>
-							<input id="planeHeight" class="" type="number" value="2500">
+							<input id="planeHeight" class="" type="number">
 							<label for="planeHeight" class="">Висота, мм</label>
 						</div>
 						<button id="addPlane" data-disabled="file">Додати площину</button>
@@ -119,13 +119,13 @@
 					<div class="control__caption">Вирізи площини</div>
 					<div class="control__group">
 						<div class="control__inputs">
-							<input id="excisionWidth" class="" type="number" value="1000">
+							<input id="excisionWidth" class="" type="number">
 							<label for="excisionWidth" class="">Ширина, мм</label>
-							<input id="excisionHeight" class="" type="number" value="1000">
+							<input id="excisionHeight" class="" type="number">
 							<label for="excisionHeight" class="">Висота, мм</label>
-							<input id="excisionDX" class="" type="number" value="1000">
+							<input id="excisionDX" class="" type="number">
 							<label for="excisionDX" class="">dX</label>
-							<input id="excisionDY" class="" type="number" value="1000">
+							<input id="excisionDY" class="" type="number">
 							<label for="excisionDY" class="">dY</label>
 						</div>
 						<button id="addExcision" data-disabled="plane">Додати виріз</button>
@@ -139,11 +139,11 @@
 					<div class="control__group">
 						<div class="control__label control__label_center">Розміри касети</div>
 						<div class="control__inputs">
-							<input id="tileWidth" class="" type="number" value="400">
+							<input id="tileWidth" class="" type="number">
 							<label for="tileWidth" class="">Ширина, мм</label>
-							<input id="tileHeight" class="" type="number" value="400">
+							<input id="tileHeight" class="" type="number">
 							<label for="tileHeight" class="">Висота, мм</label>
-							<input id="tileJoint" class="" type="number" value="50">
+							<input id="tileJoint" class="" type="number">
 							<label for="tileJoint" class="">Стик, мм</label>
 						</div>
 						<button id="addTiles" data-disabled="plane">Розкласти</button>
