--- a/index.html
+++ b/index.html
@@ -20,38 +20,38 @@
 				<div class="navigation__item dropdown">
 					<div class="dropdown__toggle">Файл</div>
 					<div class="dropdown__menu">
-						<button id="newFile" class="navigation__btn dropdown__item">Новий проєкт</button>
-						<button id="saveFile" data-disabled="file" class="navigation__btn dropdown__item">Зберегти</button>
+						<button id="newFile" data-hotkeys="Ctrl+N" class="navigation__btn dropdown__item">Новий проєкт</button>
+						<button id="saveFile" data-hotkeys="Ctrl+S" data-disabled="file" class="navigation__btn dropdown__item">Зберегти</button>
 						<div class="dropdown__divider"></div>
-						<button id="deleteFile" data-disabled="file" class="navigation__btn dropdown__item">Видалити</button>
-						<button id="removeTab" data-disabled="file" class="navigation__btn dropdown__item">Закрити</button>
-						<button id="removeAllTabs" data-disabled="file" class="navigation__btn dropdown__item">Закрити все</button>
+						<button id="deleteFile" data-hotkeys="Ctrl+D" data-disabled="file" class="navigation__btn dropdown__item">Видалити</button>
+						<button id="removeTab" data-hotkeys="Ctrl+F4" data-disabled="file" class="navigation__btn dropdown__item">Закрити</button>
+						<button id="removeAllTabs" data-hotkeys="Ctrl+Shift+F4" data-disabled="file" class="navigation__btn dropdown__item">Закрити все</button>
 						<div class="dropdown__divider"></div>
-						<button id="export" data-disabled="pdf" class="navigation__btn dropdown__item">Експорт у PDF</button>
+						<button id="export" data-hotkeys="Ctrl+E" data-disabled="pdf" class="navigation__btn dropdown__item">Експорт у PDF</button>
 					</div>
 				</div>
 				<div class="navigation__item dropdown">
 					<div class="dropdown__toggle">Площина</div>
 					<div class="dropdown__menu">
-						<button id="removeAllExcisions" data-disabled="excisions" class="navigation__btn dropdown__item">Видалити всі вирізи</button>
+						<button id="removeAllExcisions" data-hotkeys="Ctrl+U" data-disabled="excisions" class="navigation__btn dropdown__item">Видалити всі вирізи</button>
 						<div class="dropdown__divider"></div>
-						<button id="clonePlane" data-disabled="plane" class="navigation__btn dropdown__item">Скопіювати площину</button>
-						<button id="removePlane" data-disabled="plane" class="navigation__btn dropdown__item">Видалити площину</button>
+						<button id="clonePlane" data-hotkeys="Ctrl+J" data-disabled="plane" class="navigation__btn dropdown__item">Скопіювати площину</button>
+						<button id="removePlane" data-hotkeys="Ctrl+K" data-disabled="plane" class="navigation__btn dropdown__item">Видалити площину</button>
 						<div class="dropdown__divider"></div>
-						<button id="addStandartTiles" data-disabled="plane" class="navigation__btn dropdown__item">Стандартна розкладка</button>
-						<button id="removeTiles" data-disabled="tiles" class="navigation__btn dropdown__item">Очистити розкладку</button>
+						<button id="addStandartTiles" data-hotkeys="Ctrl+L" data-disabled="plane" class="navigation__btn dropdown__item">Стандартна розкладка</button>
+						<button id="removeTiles" data-hotkeys="Ctrl+P" data-disabled="tiles" class="navigation__btn dropdown__item">Очистити розкладку</button>
 					</div>
 				</div>
 				<div class="navigation__item dropdown">
 					<div class="dropdown__toggle">Редагування</div>
 					<div class="dropdown__menu">
-						<button id="unDo" data-disabled="unDo" class="navigation__btn dropdown__item">Скасувати</button>
-						<button id="reDo" data-disabled="reDo" class="navigation__btn dropdown__item">Повторити</button>
+						<button id="unDo" data-hotkeys="Ctrl+Z" data-disabled="unDo" class="navigation__btn dropdown__item">Скасувати</button>
+						<button id="reDo" data-hotkeys="Ctrl+Y" data-disabled="reDo" class="navigation__btn dropdown__item">Повторити</button>
 						<div class="dropdown__divider"></div>
-						<button id="centerX" data-disabled="tiles" class="navigation__btn dropdown__item">Центрувати по осі X</button>
-						<button id="centerY" data-disabled="tiles" class="navigation__btn dropdown__item">Центрувати по осі Y</button>
+						<button id="centerX" data-hotkeys="Ctrl+Q" data-disabled="tiles" class="navigation__btn dropdown__item">Центрувати по осі X</button>
+						<button id="centerY" data-hotkeys="Ctrl+W" data-disabled="tiles" class="navigation__btn dropdown__item">Центрувати по осі Y</button>
 						<div class="dropdown__divider"></div>
-						<button id="trim" data-disabled="tiles" class="navigation__btn dropdown__item">Трімінг по контуру</button>
+						<button id="trim" data-hotkeys="Ctrl+T" data-disabled="tiles" class="navigation__btn dropdown__item">Трімінг по контуру</button>
 						<button id="trimUp" data-disabled="tiles" class="navigation__btn dropdown__item">Трімінг зверху</button>
 						<button id="trimDown" data-disabled="tiles" class="navigation__btn dropdown__item">Трімінг знизуу</button>
 						<button id="trimLeft" data-disabled="tiles" class="navigation__btn dropdown__item">Трімінг зліва</button>
